--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "faunadb": "^4.1.2",
     "next": "latest",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.5"
   },
   "devDependencies": {
     "@tailwindcss/jit": "0.1.3",
