--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-hook-form": "^6.15.5"
+    "react-hook-form": "^6.15.5",
+    "swr": "^0.5.4"
   },
   "devDependencies": {
     "@tailwindcss/jit": "0.1.3",
