--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.3.0",
+    "@tailwindcss/typography": "^0.4.0",
     "faunadb": "^4.1.2",
     "next": "latest",
+    "next-themes": "^0.0.14",
+    "nightwind": "^1.1.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.5",
